<?xml version="1.0"?>

<package format="3">
  <name>dyno_control</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="mikolaj.kliniewski@gmail.com">mikolaj</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>my_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>yaml</depend>

  <exec_depend>ros2launch</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

